--- a/SistemaSac.Front/SistemaSac.Front.csproj
+++ b/SistemaSac.Front/SistemaSac.Front.csproj
@@ -479,7 +479,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SistemaSac.Domain\SistemaSac.Dominio.csproj">
+    <ProjectReference Include="..\SistemaSac.Dominio\SistemaSac.Dominio.csproj">
       <Project>{2aa6fdd3-e647-447d-bb43-b1939d77c9ad}</Project>
       <Name>SistemaSac.Dominio</Name>
     </ProjectReference>
